syntax = "proto3";
package broadcast;
option go_package = "protobuf/proto/broadcast";

import "google/protobuf/empty.proto";
import "proto/common/common.proto";

service Broadcast {
    rpc heartbeat(google.protobuf.Empty) returns (common.MessageResponse) {}
    rpc clientHeartbeat(UserSession) returns (common.MessageResponse) {}
    rpc broadcastUserPresenceEvent(UserPresence) returns (common.MessageResponse) {}
    rpc broadcastMessageEvent(common.Message) returns (common.MessageResponse) {}
}

message UserSession {
    string userId = 1;
    string server = 2;
} 

message UserPresence {
    string userId = 1;
    string status = 2;
}
