syntax = "proto3";

package message;
option go_package = "protobuf/proto/message";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/common.proto";

service Message {
    rpc heartbeat(google.protobuf.Empty) returns (common.MessageResponse) {}
    rpc getLatestMessages(MessageRequest) returns (Messages) {}
    rpc getPreviousMessages(MessageRequest) returns (Messages) {}
}

message MessageRequest {
    string channelId = 1;
    uint64 lastMessageId = 2;
}

message Messages {
    repeated common.Message messages = 1;
}